Fix overlap issues

--- a/src/components/AboutSection/AboutSection.css
+++ b/src/components/AboutSection/AboutSection.css
@@ -66,46 +66,29 @@
     height: 60vh;
   }
 
-  #about .container {
-    position: relative;
-    padding: 15px 10px 0 10px;
-  }
-
-  #about .container::after {
-    content: 'Scroll down to read more';
-    width: fit-content;
-    position: absolute;
-    bottom: -30px;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 5px 10px;
-    border-radius: 1rem;
-    font-family: sans-serif;
-    font-size: 1.1rem;
-    text-align: center;
-    text-transform: uppercase;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
-    color: var(--primary-color);
-    background-color: rgba(255, 255, 255, 0.5);
-    backdrop-filter: 0.5rem;
-  }
-
   #about .about-wrapper {
-    max-height: 55ch;
     padding: 0;
-    overflow-y: scroll;
   }
 
   #about .about-wrapper__title {
-    margin-bottom: 15px;
-  }
-
-  #about .about-wrapper__paragraph,
-  #about .about-wrapper__paragraph a {
-    font-size: 1.3rem;
+    margin: 15px 0;
   }
 
   #about .about-wrapper__paragraph a {
     text-decoration: underline wavy var(--primary-color) 1px;
+  }
+}
+
+@media (max-width: 480px) {
+  #about .about-wrapper__title {
+    margin: 0 0 10px 0;
+    font-size: 2rem;
+  }
+
+  #about .about-wrapper__paragraph,
+  #about .about-wrapper__paragraph a {
+    margin: 5px 0 0 0;
+    font-size: 1.2rem;
+    line-height: 1.1;
   }
 }
